@@ -1,3 +1,7 @@
+*** 20001025_1 by lusky
+fix path in viconf (ab)
+
+
 *** 20001024_1 by lusky
 fixed new x_LINES_OPER_ONLY defines (jdc)
 
